Updated default CSS classes, for heroicons, to modern Tailwind CSS

--- a/lib/generators/rails_icons/templates/initializer.rb.tt
+++ b/lib/generators/rails_icons/templates/initializer.rb.tt
@@ -3,16 +3,16 @@ RailsIcons.configure do |config|
   config.default_library = "heroicons" # https://heroicons.com/
   config.default_set = "outline" # other sets for Heroicons are: solid, mini, micro
 
-  config.libraries.heroicons.solid.default.css = "w-6 h-6"
+  config.libraries.heroicons.solid.default.css = "size-6"
   config.libraries.heroicons.solid.default.data = {}
 
-  config.libraries.heroicons.outline.default.css = "w-6 h-6"
+  config.libraries.heroicons.outline.default.css = "size-6"
   config.libraries.heroicons.outline.default.stroke_width = "1.5"
   config.libraries.heroicons.outline.default.data = {}
 
-  config.libraries.heroicons.mini.default.css = "w-5 h-5"
+  config.libraries.heroicons.mini.default.css = "size-5"
   config.libraries.heroicons.mini.default.data = {}
 
-  config.libraries.heroicons.micro.default.css = "w-4 h-4"
+  config.libraries.heroicons.micro.default.css = "size-4"
   config.libraries.heroicons.micro.default.data = {}
 end
