Lets be consistent with naming `variant` → `set`

--- a/lib/generators/rails_icons/templates/initializer.rb.tt
+++ b/lib/generators/rails_icons/templates/initializer.rb.tt
@@ -1,7 +1,7 @@
 RailsIcons.configure do |config|
   # Set the default set for the library
   config.default_library = "heroicons" # https://heroicons.com/
-  config.default_set = "outline" # other sets for Heroicons are: solid, mini, micro
+  config.default_variant = "outline" # other variant for Heroicons are: solid, mini, micro
 
   config.libraries.heroicons.solid.default.css = "size-6"
   config.libraries.heroicons.solid.default.data = {}
