--- a/lib/generators/rails_icons/templates/initializer.rb.tt
+++ b/lib/generators/rails_icons/templates/initializer.rb.tt
@@ -5,16 +5,30 @@ RailsIcons.configure do |config|
   config.default_library = "heroicons" # https://heroicons.com/
   config.default_variant = "outline" # other variant for Heroicons are: solid, mini, micro
 
-  config.libraries.heroicons.solid.default.css = "size-6"
-  config.libraries.heroicons.solid.default.data = {}
+  # Override heroicon defaults
+  # config.libraries.heroicons.solid.default.css = "w-6 h-6"
+  # config.libraries.heroicons.solid.default.data = {}
 
-  config.libraries.heroicons.outline.default.css = "size-6"
-  config.libraries.heroicons.outline.default.stroke_width = "1.5"
-  config.libraries.heroicons.outline.default.data = {}
+  # config.libraries.heroicons.outline.default.css = "w-6 h-6"
+  # config.libraries.heroicons.outline.default.stroke_width = "1.5"
+  # config.libraries.heroicons.outline.default.data = {}
 
-  config.libraries.heroicons.mini.default.css = "size-5"
-  config.libraries.heroicons.mini.default.data = {}
+  # config.libraries.heroicons.mini.default.css = "w-5 h-5"
+  # config.libraries.heroicons.mini.default.data = {}
 
-  config.libraries.heroicons.micro.default.css = "size-4"
-  config.libraries.heroicons.micro.default.data = {}
+  # config.libraries.heroicons.micro.default.css = "w-4 h-4"
+  # config.libraries.heroicons.micro.default.data = {}
+
+  # Override lucide defaults
+  # config.libraries.lucide.outline.default.css = "w-6 h-6"
+  # config.libraries.lucide.outline.default.stroke_width = "1.5"
+  # config.libraries.lucide.outline.default.data = {}
+
+  # Override tabler defaults
+  # config.libraries.tabler.solid.default.css = "w-6 h-6"
+  # config.libraries.tabler.solid.default.data = {}
+
+  # config.libraries.tabler.outline.default.css = "w-6 h-6"
+  # config.libraries.tabler.outline.default.stroke_width = "2"
+  # config.libraries.tabler.outline.default.data = {}
 end
